[gd_scene load_steps=9 format=3 uid="uid://dmj1y0ptr5di5"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_7lyj1"]
[ext_resource type="Script" uid="uid://erobs0yhnfki" path="res://scripts/menus/inventory_panel/shard_learn_panel.gd" id="2_v8r8a"]
[ext_resource type="Texture2D" uid="uid://biscd4ubrdmwc" path="res://graphics/ui/question_mark.png" id="3_ngq06"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="4_uqnbk"]
[ext_resource type="PackedScene" uid="uid://caulhsqfxcmcu" path="res://prefabs/ui/stats/move_pool_panel.tscn" id="5_nxxmf"]
[ext_resource type="PackedScene" uid="uid://b0s2dmndrj7t7" path="res://prefabs/ui/stats/move_details_panel.tscn" id="6_atxhp"]
[ext_resource type="Script" uid="uid://cqu8qkicb5n1f" path="res://scripts/menus/scroll_better_follow.gd" id="6_lbx7y"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="7_st60c"]

[node name="ShardLearnPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7lyj1")
script = ExtResource("2_v8r8a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.431373)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 1240.0
offset_bottom = 680.0

[node name="ShardSpriteControl" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = 55.0
offset_top = 9.0
offset_right = 119.0
offset_bottom = 73.0

[node name="ShardSprite" type="Sprite2D" parent="Panel/ShardSpriteControl"]
position = Vector2(32, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_ngq06")

[node name="LearnPanelTitle" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -479.5
offset_top = 13.0
offset_right = 479.5
offset_bottom = 63.0
grow_horizontal = 2
theme = ExtResource("4_uqnbk")
bbcode_enabled = true
text = "[center]Learn a Move From Combatant Name Here[/center]"
fit_content = true

[node name="EvolutionScrollContainer" type="ScrollContainer" parent="Panel" node_paths=PackedStringArray("boxContainer")]
custom_minimum_size = Vector2(0, 72)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 73.0
offset_right = -8.0
offset_bottom = 145.0
grow_horizontal = 2
script = ExtResource("6_lbx7y")
boxContainer = NodePath("EvolutionHboxContainer")

[node name="EvolutionHboxContainer" type="HBoxContainer" parent="Panel/EvolutionScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MovePoolPanel" parent="Panel" instance=ExtResource("5_nxxmf")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -174.0
offset_right = 290.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" parent="Panel" instance=ExtResource("7_st60c")]
custom_minimum_size = Vector2(80, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -58.0
offset_right = 40.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="MoveDetailsPanel" parent="." instance=ExtResource("6_atxhp")]
visible = false

[connection signal="visibility_changed" from="Panel/EvolutionScrollContainer" to="Panel/EvolutionScrollContainer" method="_on_visibility_changed"]
[connection signal="details_button_clicked" from="Panel/MovePoolPanel" to="." method="_on_move_pool_panel_details_button_clicked"]
[connection signal="learn_button_clicked" from="Panel/MovePoolPanel" to="." method="_on_move_pool_panel_learn_button_clicked"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="back_pressed" from="MoveDetailsPanel" to="." method="_on_move_details_panel_back_pressed"]
